# gkvocabdb-rs

./: .eslintrc.js  Cargo.toml  README.md  dockerfile  index.test.js  lemmatizer.csv  package-lock.json  package.json
.github/workflows/: rust.yml
actix/: Cargo.toml
actix/src/: hqvocab.html  hqvocab.rs  login.rs  main.rs
gkvocabdb/: Cargo.toml
gkvocabdb/src/: db.rs  dbpostgres.rs  dbsqlite.rs  export_text.rs  import_text.rs  import_text_xml.rs  lib.rs
gkvocabdb/src/latex/: doc_template.tex
src/: db.rs  export_text.rs  gkvocab.rs  hqvocab.html  hqvocab.rs  import_text_xml.rs  login.rs  main.rs
src/latex/: verse_table_start.tex
static/: index.html  index.js  manifest.json  wordtree.js
