[package]
name = "gkvocabdb-rs"
version = "0.2.0"
edition = "2021"
authors = ["Jeremy March <jmarch@gradcenter.cuny.edu>"]
license = "AGPL-3.0"

[dependencies]
actix-web = { version = "4.1.0" }
actix-files = "0.6.2"
actix-session = { version = "0.7.1", features = ["cookie-session"] }
actix-multipart = "0.4.0"
actix-web-httpauth = "0.8.0"

quick-xml = "0.23.0"

unicode-normalization = { version = "0.1.21", default-features = false }

chrono = "0.4.19"

sqlx = { version = "0.6.1", features = ["sqlite", "runtime-actix-rustls", "any", "macros"] }

serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
futures = "0.3.24"
env_logger = "0.9"
thiserror = "1.0.34"
secrecy = { version = "0.8", features = ["serde"] }


regex = "1.5.5"
percent-encoding = "2.1.0"

[dev-dependencies]
actix-rt = "2.6.0"

[profile.release]
opt-level = 3
#lto = true
