[package]
name = "gkvocabdb-rs"
version = "0.2.0"
edition = "2021"
authors = ["Jeremy March <jmarch@gradcenter.cuny.edu>"]
license = "AGPL-3.0"

[dependencies]
actix-web = { version = "4.2.1" }
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-multipart = "0.4.0"
actix-web-httpauth = "0.8.0"

quick-xml = "0.25.0"

unicode-normalization = { version = "0.1.21", default-features = false }

chrono = "0.4.22"

sqlx = { version = "0.6.2", features = ["sqlite", "runtime-actix-rustls", "any", "macros"] }

serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"
futures = "0.3.24"
env_logger = "0.9"
thiserror = "1.0.37"
secrecy = { version = "0.8", features = ["serde"] }
hex = "0.4.3"

regex = "1.6"
percent-encoding = "2.1.0"

[dev-dependencies]
actix-rt = "2.7.0"

[profile.release]
opt-level = 3
#lto = true
