[package]
name = "gkvocabdb-rs"
version = "0.2.0"
edition = "2021"
authors = ["Jeremy March <jmarch@gradcenter.cuny.edu>"]
license = "AGPL-3.0"

[dependencies]
actix-web = { version = "4.3.0" }
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-multipart = "0.5.0"
actix-web-httpauth = "0.8.0"

quick-xml = "0.27.1"

unicode-normalization = { version = "0.1.22", default-features = false }

chrono = { version = "0.4.23", default-features = false, features=["clock"] }

sqlx = { version = "0.6.2", features = ["sqlite", "runtime-actix-rustls", "any", "macros"] }

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
futures = "0.3.25"
env_logger = "0.10.0"
thiserror = "1.0.38"
secrecy = { version = "0.8", features = ["serde"] }
hex = "0.4.3"

regex = "1.7.1"
percent-encoding = "2.2.0"

[dev-dependencies]
actix-rt = "2.8.0"

[profile.release]
opt-level = 3
#lto = true
