[package]
name = "actix"
version = "0.2.0"
edition = "2021"
authors = ["Jeremy March <jmarch@gradcenter.cuny.edu>"]
license = "AGPL-3.0"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
gkvocabdb = { path = "../gkvocabdb" }
actix-web = { version = "4.4.0" }
actix-files = "0.6.2"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
actix-multipart = "0.6.1"
actix-web-httpauth = "0.8.1"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0.193", features = ["derive"] }
futures = "0.3.29"
env_logger = "0.10.1"
thiserror = "1.0.50"
secrecy = { version = "0.8", features = ["serde"] }
hex = "0.4.3"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
