[package]
name = "actix"
version = "0.2.0"
edition = "2021"
authors = ["Jeremy March <jmarch@gradcenter.cuny.edu>"]
license = "AGPL-3.0"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
gkvocabdb = { path = "../gkvocabdb" }
actix-web = { version = "4.9.0" }
actix-files = "0.6.6"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-multipart = "0.7.2"
actix-web-httpauth = "0.8.2"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "sqlite",
    "any",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0.210", features = ["derive"] }
futures = "0.3.30"
env_logger = "0.11.5"
thiserror = "1.0.63"
secrecy = { version = "0.8", features = ["serde"] }
hex = "0.4.3"
regex = "1.10.6"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
