[package]
name = "gkvocabdb"
version = "0.2.0"
edition = "2021"
authors = ["Jeremy March <jmarch@gradcenter.cuny.edu>"]
license = "AGPL-3.0"

[lib]
name = "gkvocabdb"
path = "src/lib.rs"
doctest = false

[dependencies]
quick-xml = "0.36.1"
unicode-normalization = { version = "0.1.23", default-features = false }
chrono = { version = "0.4.34", default-features = false, features = ["clock"] }
sqlx = { version = "0.8.0", features = ["sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
regex = "1.10.6"
csv = "1.3.0"
async-trait = "0.1.81"
thiserror = "1.0.63"
secrecy = { version = "0.8.0", features = ["serde"] }
argon2 = { version = "0.5.3", features = ["std"] }
tokio = { version = "1.39.2", features = ["rt", "macros"] }
rand = "0.8.5"

[dev-dependencies]
tokio = { version = "1.39.2", features = ["rt", "macros"] }

[profile.release]
opt-level = 3
lto = true
