[package]
name = "gkvocabdb"
version = "0.2.0"
edition = "2021"
authors = ["Jeremy March <jmarch@gradcenter.cuny.edu>"]
license = "AGPL-3.0"

[lib]
name = "gkvocabdb"
path = "src/lib.rs"
doctest = false

[dependencies]
quick-xml = "0.36.1"
unicode-normalization = { version = "0.1.23", default-features = false }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
sqlx = { version = "0.8.2", features = [
    "postgres",
    "sqlite",
    "any",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
regex = "1.10.6"
csv = "1.3.0"
async-trait = "0.1.82"
thiserror = "1.0.63"
secrecy = { version = "0.8.0", features = ["serde"] }
argon2 = { version = "0.5.3", features = ["std"] }
tokio = { version = "1.40.0", features = ["rt", "macros"] }
rand = "0.8.5"

[features]
# default = ["postgres"]
postgres = [] #if not, use sqlite

[dev-dependencies]
tokio = { version = "1.40.0", features = ["rt", "macros"] }
serial_test = "3.1.1"

[profile.release]
opt-level = 3
lto = true
